syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

import "payment.proto";

option go_package = "github.com/itsscb/df/pb";

message GetPaymentRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "GetPayment";
          description: "Get an Payment by ID";
          required: [
            "id"
            ];
        };
        example: "{\"id\": \"1\" }";
    };
    uint64 id = 1;
}

message GetPaymentResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "GetPayment Response";
          description: "Returns the Payment";
        };
    };
    Payment payment = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      }];
}